panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__test_error_invalid_operand_for_binary_operator.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/test_error_invalid_operand_for_binary_operator.c
snapshot_kind: text
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: invalid operands to binary operator `+`
   ╭─[panko/tests/cases/test_error_invalid_operand_for_binary_operator.c:4:9]
   │
 4 │     f() + 42;
   │     ─┬─ ─ ─┬  
   │      │     ╰── this is of type `int`
   │      │        
   │      ╰──────── this is of type `void`
───╯
